0502 6人対戦　役なし

--- a/テキサスホールデム/index.html
+++ b/テキサスホールデム/index.html
@@ -27,6 +27,7 @@
     <div id="player3" class="player" style="top: 15%; left: 50%; transform: translate(-50%, -50%);"></div>
     <div id="player4" class="player" style="top: 30%; left: 10%; transform: translate(-50%, -50%);"></div>
     <div id="player5" class="player" style="top: 65%; left: 10%; transform: translate(-50%, -50%);"></div>
+    <div id="results" style="margin-top: 20px; font-size: 20px; text-align: center;"></div>
 </div>
 
 <button onclick="deal()">カードを配る</button>
